Improve Condition implementation